fix svg class name clashes and add dark mode color

--- a/site/src/css/custom.css
+++ b/site/src/css/custom.css
@@ -70,8 +70,9 @@
 
 /* Adjust Dark Mode colors */
 html[data-theme='dark'] {
-  --ifm-background-color: #121212;
-  --ifm-background-surface-color: #121212;
+  --ifm-background-color: #082134;
+  --ifm-navbar-background-color: #082134;
+  --ifm-background-surface-color: #082134;
   --ifm-color-primary: #079CEE;
   --ifm-color-primary-dark: #068cd6;
   --ifm-color-primary-darker: #0685ca;
